; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-topcliff-pch.c_pch_spi_readreg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-topcliff-pch.c_pch_spi_readreg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_master = type { i32 }
%struct.pch_spi_data = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_master*, i32)* @pch_spi_readreg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pch_spi_readreg(%struct.spi_master* %0, i32 %1) #0 {
  %3 = alloca %struct.spi_master*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pch_spi_data*, align 8
  store %struct.spi_master* %0, %struct.spi_master** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.spi_master*, %struct.spi_master** %3, align 8
  %7 = call %struct.pch_spi_data* @spi_master_get_devdata(%struct.spi_master* %6)
  store %struct.pch_spi_data* %7, %struct.pch_spi_data** %5, align 8
  %8 = load %struct.pch_spi_data*, %struct.pch_spi_data** %5, align 8
  %9 = getelementptr inbounds %struct.pch_spi_data, %struct.pch_spi_data* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i32, i32* %4, align 4
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %10, %12
  %14 = call i32 @ioread32(i64 %13)
  ret i32 %14
}

declare dso_local %struct.pch_spi_data* @spi_master_get_devdata(%struct.spi_master*) #1

declare dso_local i32 @ioread32(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
